# he-assistant-5-6

./: pyproject.toml
hr_assistant/: __init__.py  config.py  custom_embedding.py  database.py  document_processor.py  semantic_chunking.py  utils.py
