[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "christian",email = "chris06lagreca@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "chainlit (>=2.11.1,<3.0.0)",
    "openai (>=2.41.0,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
